<resources>
    <string name="app_name">RegistrationCardProject</string>
    <string name="inputName">"Enter Name:"</string>
    <string name="inputEmail">Enter Email</string>
    <string name="inputPassword">Enter Password</string>
    <string name="inputRe_password"> enter Re_password</string>
    <string name="inputBarthday">Enter Barthday</string>
    <string name="male">male</string>
    <string name="Female">Female</string>
    <string name="Registration">Registration</string>
    <string name="viewInfo">the information are</string>

</resources>