<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/App"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/inputEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        tools:ignore="MissingConstraints,TextFields">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="208dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="35dp"
        android:hint="@string/inputName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="128dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputBarthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="29dp"
        android:hint="@string/inputBarthday"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/inputRepassword"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRepassword"
        tools:ignore="MissingConstraints,TextFields">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBarthday1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="427dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputRepassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:hint="@string/inputRe_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/inputBarthday"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints,TextFields">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="349dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/inputRepassword"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        tools:ignore="MissingConstraints,TextFields">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRepassword1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="280dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginBottom="21dp"
        android:text="@string/Registration"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewInfo"
        app:layout_constraintStart_toStartOf="@+id/viewInfo"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toTopOf="@+id/Registration"
        app:layout_constraintEnd_toEndOf="@+id/inputBarthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBarthday">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="508dp" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="48dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/viewInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="89dp"
        android:hint="@string/viewInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="108dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="37dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toTopOf="@+id/viewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputBarthday"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />


</androidx.constraintlayout.widget.ConstraintLayout>